# proxmox

./: Cargo.toml
proxmox-api-macro/: Cargo.toml
proxmox-api-macro/debian/: changelog  control
proxmox-api-macro/src/: lib.rs
proxmox-api-macro/tests/: api2.rs  types.rs
proxmox-client/: Cargo.toml
proxmox-client/debian/: changelog  control
proxmox-client/src/: client.rs
proxmox-icalendar/: Cargo.toml
proxmox-icalendar/debian/: changelog  control
proxmox-icalendar/src/: lib.rs
proxmox-installer-types/: Cargo.toml
proxmox-installer-types/debian/: changelog  control
proxmox-installer-types/src/: answer.rs
proxmox-ldap/: Cargo.toml
proxmox-ldap/debian/: changelog  control
proxmox-ldap/src/: lib.rs  sync.rs
proxmox-rest-server/: Cargo.toml
proxmox-rest-server/debian/: changelog  control
proxmox-rest-server/src/: api_config.rs  rest.rs
proxmox-s3-client/src/: shared_request_counters.rs
proxmox-schema/: Cargo.toml
proxmox-schema/debian/: changelog  control
proxmox-schema/src/: api_types.rs  comma_separated_list.rs  schema.rs
proxmox-schema/tests/: schema.rs
proxmox-section-config/: Cargo.toml
proxmox-section-config/debian/: changelog  control
proxmox-section-config/src/: lib.rs
proxmox-sendmail/: Cargo.toml
proxmox-sendmail/debian/: changelog  control
proxmox-sendmail/src/: lib.rs
proxmox-shared-memory/src/: lib.rs
proxmox-shared-memory/tests/: raw_shared_mutex.rs
proxmox-sys/: Cargo.toml
proxmox-syslog-api/: Cargo.toml
proxmox-time/: Cargo.toml
pve-api-types/: Cargo.toml  generate.pl
(+18 files in other folders)
